--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@expo-google-fonts/lato": "^0.2.3",
     "@expo-google-fonts/oswald": "^0.2.3",
     "@expo/vector-icons": "^13.0.0",
+    "@react-native-async-storage/async-storage": "1.17.11",
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/stack": "^6.3.16",
@@ -20,6 +21,7 @@
     "expo": "~48.0.15",
     "expo-font": "~11.1.1",
     "expo-status-bar": "~1.4.4",
+    "firebase": "^9.22.2",
     "react": "18.2.0",
     "react-native": "0.71.3",
     "react-native-maps": "1.3.2",
@@ -28,8 +30,7 @@
     "react-native-screens": "~3.20.0",
     "react-native-svg": "^13.4.0",
     "react-native-webview": "11.26.0",
-    "styled-components": "^5.3.11",
-    "@react-native-async-storage/async-storage": "1.17.11"
+    "styled-components": "^5.3.11"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
