--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
     "@react-navigation/stack": "^6.3.16",
     "camelize": "^1.0.1",
     "expo": "~48.0.15",
+    "expo-constants": "~14.2.1",
     "expo-font": "~11.1.1",
     "expo-status-bar": "~1.4.4",
     "firebase": "^9.22.2",
     "react": "18.2.0",
     "react-native": "0.71.3",
+    "react-native-dotenv": "^3.4.8",
     "react-native-maps": "1.3.2",
     "react-native-paper": "^5.8.0",
     "react-native-safe-area-context": "4.5.0",
@@ -35,6 +37,8 @@
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@react-native-community/eslint-config": "^3.2.0",
+    "@types/react": "~18.0.27",
+    "@types/react-native": "^0.72.2",
     "eslint": "^8.41.0",
     "prettier": "^2.8.8"
   },
