--- a/package.json
+++ b/package.json
@@ -24,13 +24,14 @@
     "expo-status-bar": "~1.4.4",
     "firebase": "^9.22.2",
     "react": "18.2.0",
-    "react-native": "0.71.3",
+    "react-native": "0.71.8",
     "react-native-dotenv": "^3.4.8",
     "react-native-maps": "1.3.2",
     "react-native-paper": "^5.8.0",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
-    "react-native-svg": "^13.4.0",
+    "react-native-svg": "13.4.0",
+    "react-native-vector-icons": "^9.2.0",
     "react-native-webview": "11.26.0",
     "styled-components": "^5.3.11"
   },
