--- a/package.json
+++ b/package.json
@@ -33,7 +33,9 @@
     "react-native-svg": "13.4.0",
     "react-native-vector-icons": "^9.2.0",
     "react-native-webview": "11.26.0",
-    "styled-components": "^5.3.11"
+    "styled-components": "^5.3.11",
+    "expo-asset": "~8.9.1",
+    "lottie-react-native": "5.1.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
