--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
     "@react-navigation/stack": "^6.3.16",
     "camelize": "^1.0.1",
     "expo": "~48.0.15",
+    "expo-asset": "~8.9.1",
     "expo-constants": "~14.2.1",
     "expo-font": "~11.1.1",
     "expo-status-bar": "~1.4.4",
     "firebase": "^9.22.2",
+    "lottie-react-native": "5.1.4",
     "react": "18.2.0",
     "react-native": "0.71.8",
     "react-native-dotenv": "^3.4.8",
@@ -33,15 +35,14 @@
     "react-native-svg": "13.4.0",
     "react-native-vector-icons": "^9.2.0",
     "react-native-webview": "11.26.0",
-    "styled-components": "^5.3.11",
-    "expo-asset": "~8.9.1",
-    "lottie-react-native": "5.1.4"
+    "styled-components": "^5.3.11"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@react-native-community/eslint-config": "^3.2.0",
     "@types/react": "~18.0.27",
     "@types/react-native": "^0.72.2",
+    "@types/styled-components": "^5.1.26",
     "eslint": "^8.41.0",
     "prettier": "^2.8.8"
   },
