--- a/package.json
+++ b/package.json
@@ -20,10 +20,14 @@
     "camelize": "^1.0.1",
     "expo": "~48.0.15",
     "expo-asset": "~8.9.1",
+    "expo-camera": "~13.2.1",
     "expo-constants": "~14.2.1",
     "expo-font": "~11.1.1",
     "expo-status-bar": "~1.4.4",
+    "expo-updates": "~0.16.4",
     "firebase": "^9.22.2",
+    "firebase-admin": "^11.9.0",
+    "firebase-functions": "^4.4.1",
     "lottie-react-native": "5.1.4",
     "react": "18.2.0",
     "react-native": "0.71.8",
@@ -35,9 +39,7 @@
     "react-native-svg": "13.4.0",
     "react-native-vector-icons": "^9.2.0",
     "react-native-webview": "11.26.0",
-    "styled-components": "^5.3.11",
-    "expo-updates": "~0.16.4",
-    "expo-camera": "~13.2.1"
+    "styled-components": "^5.3.11"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
